--- a/blog14.html
+++ b/blog14.html
@@ -89,7 +89,7 @@
                     <div class="col-sm-4">
                         <div class="section_1">
                             <div>
-                                <a href="usoRecursos2025.html" target="_blank"><input type="image" src="images/Uso de Recursos 2024.jpg" style="max-width: 100%;">
+                                <a href="usoRecursos2025.html" target="_blank"><input type="image" src="images/Uso de Recursos-2025.png" style="max-width: 100%;">
                             </div>
                             </a>
                             <h3><button src="#" type="button" class="date-bt"></button></a></h3>
@@ -100,7 +100,7 @@
                     <div class="col-sm-4">
                         <div class="section_1">
                             <div>
-                                <a href="seguimientoProceso2025.html" target="_blank"><input type="image" src="images/Seguimiento de Procesos 2024.jpg" style="max-width: 100%;">
+                                <a href="seguimientoProceso2025.html" target="_blank"><input type="image" src="images/Seguimiento de procesos-2025.jpg" style="max-width: 100%;">
                             </div>
                             </a>
                             <h3><button src="#" type="button" class="date-bt"></button></a></h3>
