--- a/blog15.html
+++ b/blog15.html
@@ -89,7 +89,7 @@
                     <div class="col-sm-4">
                         <div class="section_1">
                             <div>
-                                <a href="ComunicacionInst2025.html" target="_blank"><input type="image" src="images/Comunicación Institucional 2024.jpg" style="max-width: 100%;">
+                                <a href="ComunicacionInst2025.html" target="_blank"><input type="image" src="images/Comunicacin institucional-2025.jpg" style="max-width: 100%;">
                             </div>
                             </a>
                             <h3><button src="#" type="button" class="date-bt"></button></a></h3>
@@ -100,7 +100,7 @@
                     <div class="col-sm-4">
                         <div class="section_1">
                             <div>
-                                <a href="InteraccionEntorno2025.html" target="_blank"><input type="image" src="images/Interacción con la comunidad y el entorno 2024.png" style="max-width: 100%;">
+                                <a href="InteraccionEntorno2025.html" target="_blank"><input type="image" src="images/Interacción con la comunidad y el entorno-2025.jpg" style="max-width: 100%;">
                             </div>
                             </a>
                             <h3><button src="#" type="button" class="date-bt"></button></a></h3>
