--- a/competencias10.html
+++ b/competencias10.html
@@ -89,7 +89,7 @@
                     <div class="col-sm-4">
                         <div class="section_1">
                             <div>
-                                <p><input type="image" href="blog4.hmtl"  target="_blank" src="images/gestion academica 2024.png" style="max-width: 100%;">
+                                <p><input type="image" href="blog4.hmtl"  target="_blank" src="images/Gestion Academica-2025.png" style="max-width: 100%;">
                             </div>
                             </p>
                             <center><a href="blog13.html" class="btn btn-primary">Gestión Academica</a></center>
@@ -99,7 +99,7 @@
                     <div class="col-sm-4">
                         <div class="section_1">
                             <div>
-                                <p><input type="image" href="index.hmtl"  target="_blank" src="images/Gestion-administrativ y fianaciera 2024.jpg"
+                                <p><input type="image" href="index.hmtl"  target="_blank" src="images/Gestión administrativa y financiera-2025.png"
                                         style="max-width: 100%;">
                             </div>
                             <center><a href="blog14.html" class="btn btn-primary">Gestión Administrativa y Financiera</a>
@@ -109,7 +109,7 @@
                     <div class="col-sm-4">
                         <div class="section_1">
                             <div>
-                                <p><input type="image" href="index.hmtl"  target="_blank" src="images/Gestion Comunitaria 2024.jpg"
+                                <p><input type="image" href="index.hmtl"  target="_blank" src="images/Gestión comunitaria-2025.jpg"
                                         style="max-width: 100%;">
                             </div>
                             <center><a href="blog15.html" class="btn btn-primary">Gestión Comunitaria </a></center>
@@ -124,7 +124,7 @@
                             <div>
                                 <p><input title="Clic aquí" type="image" src="images/clicaqui.png" style="max-width: 100%;">
                             </div>
-                            <center><a  target="_blank" href="https://drive.google.com/drive/folders/1Qm23_di22hFkqg-Q5sEKVk9zq3CTQtBE" 
+                            <center><a  target="_blank" href="https://drive.google.com/drive/folders/1DIBl-OXfFQ5wwOQK48guoBNEVx0KNqGK" 
                                 class="btn btn-primary">Link a AZ </a></center>
                         
                         </div>
