--- a/competencias11.html
+++ b/competencias11.html
@@ -89,7 +89,7 @@
                     <div class="col-sm-4">
                         <div class="section_1">
                             <div>
-                                <a href="compromisoInstitucional2025.html" target="_blank"><input type="image" src="images/Compromiso Social e  institucional.jpg" style="max-width: 100%;">
+                                <a href="compromisoInstitucional2025.html" target="_blank"><input type="image" src="images/Compromiso Social e institucional-2025.jpg" style="max-width: 100%;">
                             </div>
                             </a>
                             <h3><button src="#" type="button" class="date-bt"></button></a></h3>
@@ -99,7 +99,7 @@
                     <div class="col-sm-4">
                         <div class="section_1">
                             <div>
-                                <a href="liderazgoPedagogico2025.html" target="_blank"><input type="image" src="images/Liderazgo.jpg"
+                                <a href="liderazgoPedagogico2025.html" target="_blank"><input type="image" src="images/Liderazgo-2025.png"
                                         style="max-width: 100%;">
                             </div>
                             </a>
@@ -111,7 +111,7 @@
                     <div class="col-sm-4">
                         <div class="section_1">
                             <div>
-                                <a href="orientacionLogro2025.html" target="_blank"><input type="image" src="images/Orientación al logro.jpg" style="max-width: 100%;">
+                                <a href="orientacionLogro2025.html" target="_blank"><input type="image" src="images/unnamed-2025.jpg" style="max-width: 100%;">
                             </div>
                             </a>
                             <h3><button src="#" type="button" class="date-bt"></button></a></h3>
@@ -153,7 +153,7 @@
                             <div>
                                 <p><input title="Clic aquí" type="image" src="images/clicaqui.png" style="max-width: 100%;">
                             </div>
-                            <center><a  target="_blank" href="https://drive.google.com/drive/folders/1Qm23_di22hFkqg-Q5sEKVk9zq3CTQtBE" 
+                            <center><a  target="_blank" href="https://drive.google.com/drive/folders/1DIBl-OXfFQ5wwOQK48guoBNEVx0KNqGK" 
                                 class="btn btn-primary">Link a AZ </a></center>
                         
                         </div>
