--- a/blog13.html
+++ b/blog13.html
@@ -89,7 +89,7 @@
                     <div class="col-sm-4">
                         <div class="section_1">
                             <div>
-                                <a href="convivenciaInst2025.html" target="_blank"><input type="image" src="images/pedagogia-didactica 2024.jpg" style="max-width: 100%;">
+                                <a href="convivenciaInst2025.html" target="_blank"><input type="image" src="images/Pedagógica y didactica-2025.png" style="max-width: 100%;">
                             </div>
                             </a>
                             <h3><button src="#" type="button" class="date-bt"></button></a></h3>
@@ -100,7 +100,7 @@
                     <div class="col-sm-4">
                         <div class="section_1">
                             <div>
-                                <a href="dominioCurricular2025.html" target="_blank"><input type="image" src="images/Dominio Curricular 2024.jpg" style="max-width: 100%;">
+                                <a href="dominioCurricular2025.html" target="_blank"><input type="image" src="images/Dominio curricular-2025.png" style="max-width: 100%;">
                             </div>
                             </a>
                             <h3><button src="#" type="button" class="date-bt"></button></a></h3>
@@ -111,7 +111,7 @@
                     <div class="col-sm-4">
                         <div class="section_1">
                             <div>
-                                <a href="evaluacionAprendizaje2025.html" target="_blank"><input type="image" src="images/NEvaluacion de aprendizaje.jpg" style="max-width: 60%;">
+                                <a href="evaluacionAprendizaje2025.html" target="_blank"><input type="image" src="images/Evaluación de los aprendízajes-2025.jpg" style="max-width: 60%;">
                             </div>
                             </a>
                             <h3><button src="#" type="button" class="date-bt"></button></a></h3>
@@ -122,7 +122,7 @@
                     <div class="col-sm-4">
                         <div class="section_1">
                             <div>
-                                <a href="planeacionOrganizacion2025.html" target="_blank"><input type="image" src="images/Planeación y Organización Académica 2024.jpg" style="max-width: 100%;">
+                                <a href="planeacionOrganizacion2025.html" target="_blank"><input type="image" src="images/Planeación y organización académica-2025.png" style="max-width: 100%;">
                             </div>
                             </a>
                             <h3><button src="#" type="button" class="date-bt"></button></a></h3>
