--- a/index.html
+++ b/index.html
@@ -211,25 +211,26 @@
             <div class="container">
                 <div class="row">
                     <!-- Primer contenedor -->
-                    <div class="col-md-6">
-                        <div class="written_text2">
-                            <a>
-                                <h1 class="written_text2">Experiencias Inesaistas 2025</h1>
-                            </a>
-                            <a href="competencias10.html">
-                                <h2 class="written_text2">COMPETENCIAS FUNCIONALES (Clic aquí)</h2>
-                            </a>
-                            <p>Corresponden al desempeño de las responsabilidades específicas del cargo de
-                                docente o directivo docente, definidas en la ley y los reglamentos</p>
-                            <a href="competencias11.html">
-                                <h2 class="written_text2">COMPETENCIAS COMPORTAMENTALES (Clic aquí)</h2>
-                            </a>
-                            <p>Se refieren a las actitudes, los valores, los intereses y las motivaciones
-                                con que los educadores cumplen sus funciones. Son comunes a docentes
-                                y directivos docentes.
-                            </p>
-                        </div>
-                    </div>
+       <div class="col-md-6">
+    <div class="written_text2" style="background-color:#d6eaff; padding:20px; border-radius:10px;">
+        <a>
+            <h1 class="written_text2" style="background-color:#d6eaff;" >Experiencias Inesaistas 2025</h1>
+        </a>
+        <a href="competencias10.html">
+            <h2 class="written_text2" style="background-color:#d6eaff;"">COMPETENCIAS FUNCIONALES (Clic aquí)</h2>
+        </a>
+        <p>Corresponden al desempeño de las responsabilidades específicas del cargo de
+            docente o directivo docente, definidas en la ley y los reglamentos</p>
+        <a href="competencias11.html">
+            <h2 class="written_text2" style="background-color:#d6eaff;">COMPETENCIAS COMPORTAMENTALES (Clic aquí)</h2>
+        </a>
+        <p>Se refieren a las actitudes, los valores, los intereses y las motivaciones
+            con que los educadores cumplen sus funciones. Son comunes a docentes
+            y directivos docentes.
+        </p>
+    </div>
+</div>
+
                     <!-- Segundo contenedor -->
                     <div class="col-md-6">
                         <div class="written_text2 bg-danger text-white">
