--- a/planeacionOrganizacion2025.html
+++ b/planeacionOrganizacion2025.html
@@ -114,7 +114,7 @@
                                     src="https://drive.google.com/file/d/1Ia7JcBrlWd0tliUOOwbmIBdjr58AhU0z/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Concejo Academico</button>
+                            <button type="button" class="btn btn-primary">Consejo Academico</button>
                         </div>
                     </div>
                 </div>
